# swagger.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/": {
+    "/auth/logout": {
       "get": {
         "description": "",
         "responses": {
@@ -21,69 +21,29 @@
         }
       }
     },
-    "/api-docs/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/auth/github": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/auth/github/callback": {
+    "/auth/me": {
       "get": {
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/auth/login/failed": {
-      "get": {
-        "description": "",
-        "responses": {
+          },
           "401": {
             "description": "Unauthorized"
           }
         }
       }
     },
-    "/api/auth/logout": {
+    "/artists/": {
       "get": {
         "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
+        "parameters": [
+          {
+            "name": "country",
+            "in": "query",
+            "type": "string"
           }
-        }
-      }
-    },
-    "/api/auth/status": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/artists/": {
-      "get": {
-        "description": "",
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -99,19 +59,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "firstName": {
                   "example": "any"
                 },
-                "bio": {
+                "middleName": {
                   "example": "any"
                 },
-                "nationality": {
+                "lastName": {
                   "example": "any"
                 },
-                "birthYear": {
+                "birthDate": {
                   "example": "any"
                 },
-                "deathYear": {
+                "deathDate": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "locality": {
                   "example": "any"
                 }
               }
@@ -131,7 +97,7 @@
         }
       }
     },
-    "/api/artists/{id}": {
+    "/artists/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -174,6 +140,9 @@
           "401": {
             "description": "Unauthorized"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
           }
@@ -204,13 +173,38 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
     },
-    "/api/artworks/": {
+    "/artworks/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "period",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "year",
+            "in": "query",
+            "type": "integer"
+          },
+          {
+            "name": "artistId",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -226,22 +220,31 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "description": {
-                  "example": "any"
-                },
                 "artistId": {
+                  "example": "any"
+                },
+                "title": {
                   "example": "any"
                 },
                 "year": {
                   "example": "any"
                 },
+                "period": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
                 "medium": {
                   "example": "any"
                 },
-                "imageUrl": {
+                "dimensions": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "file": {
                   "example": "any"
                 }
               }
@@ -261,7 +264,7 @@
         }
       }
     },
-    "/api/artworks/{id}": {
+    "/artworks/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -304,6 +307,9 @@
           "401": {
             "description": "Unauthorized"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
           }
@@ -338,7 +344,7 @@
         }
       }
     },
-    "/api/keywords/": {
+    "/keywords/": {
       "get": {
         "description": "",
         "responses": {
@@ -356,10 +362,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "description": {
+                "keyword": {
                   "example": "any"
                 }
               }
@@ -375,11 +378,14 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
     },
-    "/api/keywords/{id}": {
+    "/keywords/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -422,8 +428,14 @@
           "401": {
             "description": "Unauthorized"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       },
@@ -456,9 +468,21 @@
         }
       }
     },
-    "/api/artworkKeywords/": {
+    "/artworkKeywords/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "artworkId",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "keywordId",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -493,11 +517,14 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
     },
-    "/api/artworkKeywords/{id}": {
+    "/artworkKeywords/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -540,8 +567,14 @@
           "401": {
             "description": "Unauthorized"
           },
+          "403": {
+            "description": "Forbidden"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       },
@@ -574,7 +607,7 @@
         }
       }
     },
-    "/api/users/": {
+    "/users/": {
       "get": {
         "description": "",
         "responses": {
@@ -583,11 +616,14 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
     },
-    "/api/users/{id}": {
+    "/users/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -607,6 +643,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
